# src/main/resources/sandboxOpenApiSchema.yaml
@@ -21,25 +21,50 @@ paths:
               schema:
                 type: string
                 example: hello world
-  /wallet:
-    get:
-      summary: Returns  of user's wallets.
+  /api/authentication/login:
+    post:
       tags:
-        - wallet
-      description: Returns a list of user's wallets.
-      operationId: viewWallets
+        - User Management
+      summary: LogIn
+      description: As a User I want to to have a login functionality so that I can get an access to my User account
+      operationId: logIn
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LogIn'
+        required: true
       responses:
-        '200':
-          description: A list of user's wallets
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/wallet'
+        200:
+          description: ok
+        401:
+          description: Invalid Email or Password
+        422:
+          description: Wrong Email or Password format
+
+
 
 components:
-    schemas:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      description: JWT Authorization header using the Bearer scheme
+      scheme: bearer
+      bearerFormat: JWT
+  schemas:
+      LogIn:
+        type: object
+        properties:
+          email:
+            type: string
+            maxLength: 254
+            pattern: ^[a-z0-9]+[\.]{0,1}[a-z0-9]+@[a-z0-9]+\.[a-z]{2,4}$
+          password:
+            type: string
+            minLength: 8
+            maxLength: 100
+            pattern:
+              ^[a-zA-Z0-9!@#\$%\^\&*\)\(/+=._-]
       wallet:
         type: object
         properties:
@@ -53,3 +78,5 @@ components:
             type: string
           is_default:
             type: boolean
+security:
+    - bearerAuth: [ ]
